--- a/requirements.txt
+++ b/requirements.txt
@@ -64,8 +64,8 @@ oauthlib==3.1.0
 openexchangerates==0.1.1
 openpyxl==3.0.10
 packaging==19.2
-pandas==1.1.5
-Pillow==6.2.1
+pandas
+Pillow
 Pint==0.17
 pluggy==0.13.0
 proto-plus==1.20.6
