--- a/requirements.txt
+++ b/requirements.txt
@@ -86,7 +86,7 @@ python-dateutil==2.7.5
 python3-openid==3.1.0
 pytz==2022.1
 pyvips==2.1.15
-PyYAML
+PyYAML==3.10
 regex==2022.4.24
 requests==2.22.0
 requests-oauthlib==1.3.0
