--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-asgiref==3.5.2
+# asgiref==3.5.2
 astroid==2.3.3
 atomicwrites==1.3.0
 attrs==19.3.0
-autobahn==21.2.1
+# autobahn==21.2.1
 Automat==20.2.0
 autopep8==1.4.4
 CacheControl==0.12.11
@@ -18,7 +18,7 @@ choices==0.1
 click==8.0.4
 colorama==0.4.1
 constantly==15.1.0
-cryptography==37.0.2
+# cryptography==37.0.2
 CurrencyConverter==0.16.12
 daphne==3.0.2
 defusedxml==0.6.0
@@ -58,9 +58,9 @@ more-itertools==7.2.0
 msgpack==1.0.4
 mysqlclient==2.1.0
 nltk==3.6.7
-numpy==1.22.1
+numpy==1.19.5
 oauthlib==3.1.0
-opencv-python==4.5.5.64
+# opencv-python==4.5.5.64
 openexchangerates==0.1.1
 openpyxl==3.0.10
 packaging==19.2
@@ -79,10 +79,10 @@ pyfcm==1.4.7
 PyJWT==2.4.0
 pylint==2.4.4
 pymongo==3.12.3
-pyOpenSSL==22.0.0
+# pyOpenSSL==22.0.0
 pyparsing==2.4.5
 pytest==5.2.4
-python-dateutil==2.7.5
+python-dateutil==2.8.2
 python3-openid==3.1.0
 pytz==2022.1
 pyvips==2.1.15
@@ -101,7 +101,7 @@ sqlparse==0.3.0
 tqdm==4.64.0
 twilio==3.0.0
 Twisted==22.4.0
-twisted-iocpsupport==1.0.0
+# twisted-iocpsupport==1.0.2
 txaio==22.2.1
 typing_extensions==4.1.1
 uritemplate==4.1.1
